--- a/WineShop/Views/Home/Index.cshtml
+++ b/WineShop/Views/Home/Index.cshtml
@@ -4,28 +4,31 @@
 <div class="container text-center text-white" style="background-image: url('./wwwroot/images/mainPage/frontPicture.jpg')">
     <!-- Wine -->
     <div class="row col-12 vh-100">
+        <h1 style="font-family:Helvetica;">Welcome in WineShop</h1>
+        <h5 style="font-family:Helvetica;">Have a sit and try our products</h5>
         <div class="col-4">
-            <img src="..." style="width:100%">
+            <img src="@WC.ImageMainPage/w1.png" style="height:25%;"/>
             <div>
                 <h3>Red Wine</h3>
                 <p><b>We are selling wine of highest quality.</b></p>   
             </div>
         </div>
         <div class="col-4">
-            <img src="..." style="width:100%">
+            <img src="@WC.ImageMainPage/w2.png" style="height:25%;"/>
             <div>
                 <h3>White Wine</h3>
                 <p><b>It is really just about sharing our passion.</b></p>    
             </div>
         </div>
         <div class="col-4">
-            <img src="..." style="width:100%">
+            <img src="@WC.ImageMainPage/w3.png" style="height:25%;"/>
             <div>
                 <h3>Sparkling wine</h3>
                 <p><b>Thank you for your trust to our brand.</b></p>    
             </div>
         </div>
     </div>
+    <hr />
     <!-- WineShop Information -->
     <div class="row col-12 vh-100">
         <h2 class="wide">WineShop</h2>
@@ -34,6 +37,7 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus porta luctus metus, consequat mattis purus fringilla sed. Duis enim risus, cursus at ipsum ut, ultricies euismod augue. Suspendisse a ipsum ac velit ultrices dignissim. Sed pretium, eros a tincidunt finibus, libero lorem pellentesque tortor, ac dictum libero lectus at augue. Curabitur fermentum, augue placerat convallis euismod, turpis mauris malesuada neque, at luctus tortor felis sit amet dolor. In faucibus mi ut erat rutrum, ut facilisis arcu varius. Quisque risus lectus, condimentum ut tempus vel, vestibulum facilisis justo. Duis fringilla vestibulum leo, sit amet rutrum risus mattis ac. Aenean ullamcorper nulla eu ipsum elementum, non ultricies mauris rhoncus. Etiam non diam in mauris elementum ullamcorper id eu est. Aliquam diam magna, pulvinar ut neque sed, dignissim egestas dolor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer fringilla, elit a venenatis tincidunt, massa risus bibendum tellus, quis auctor risus lorem ultrices tortor.
         </p>
     </div>
+    <hr />
     <!-- About Us -->
     <div class="row col-12 vh-100">
         <div class="">
@@ -45,20 +49,21 @@
             </p>
             <div class="row">
                 <div class="col-4">
-                    <p>Name</p>
-                    <img src="..." alt="Random Name">
+                    <p>Name Surname</p>
+                    <img src="@WC.ImageUserPath/blank.png" style="width:50px; height:50px;"/>
                 </div>
                 <div class="col-4">
-                    <p>Name</p>
-                    <img src="..." alt="Random Name">
+                    <p>Name Surname</p>
+                    <img src="@WC.ImageUserPath/blank.png" style="width:50px; height:50px;"/>
                 </div>
                 <div class="col-4">
-                    <p>Name</p>
-                    <img src="..." alt="Random Name">
+                    <p>Name Surname</p>
+                    <img src="@WC.ImageUserPath/blank.png" style="width:50px; height:50px;"/>
                 </div>
             </div>
         </div>
     </div>
+    <hr />
     <!--MoreAboutUs-->
     <div class="row col-12 vh-100">
         <div class="col-4">
@@ -89,6 +94,7 @@
             </div>
         </div>
     </div>
+    <hr />
     <!-- Contact -->
     <div class="row col-12 vh-100">
         <h2 class="wide">CONTACT</h2>
@@ -114,8 +120,10 @@
             </div>
         </div>
     </div>
+    <hr />
     <!-- Image of location/map -->
     <div class="row col-12 vh-100" id="map"></div>
+    <hr />
     <!-- Footer -->
     <footer class="row col-12 vh-40" style="padding-top:20px;">
       <h1 class="hover-opacity col-2"><a href="https://www.google.pl"><i class="fa-brands fa-facebook"></i></a></h1>
