--- a/WineShop/Views/Shared/_IndividualProductCard.cshtml
+++ b/WineShop/Views/Shared/_IndividualProductCard.cshtml
@@ -26,12 +26,14 @@
 }
 
     <div class="text-dark col-lg-4 col-md-6 pb-4 filter @ViewData["ProductType"] @ViewData["ProductName"]">
-        <div class="card bg-white rounded shadow-sm" style="border:1px solid #222">
+        <div class="card rounded shadow-sm" style="border:1px solid #222; background-color:#e6e6e6">
             <div class="card-body px-3 pt-3 pb-1 row">
                 <div class="col-7"><label style="float:left">@Model.Name</label></div>
                 <div class="col-5"><label style="float:right"><span class="text-info h5">@string.Format("{0:c2}",Model.Price)</span></label> </div>
             </div>
-            <img class="card-img-top img-fluid d-block mx-auto mb-3" src="@WC.ImageProductPath@Model.Image" alt="Card image cap">
+            <div class="col-12 col-lg-12 p-2">
+                <img class="card-img-top img-fluid d-block mx-auto mb-3" style="height: 450px;" src="@WC.ImageProductPath@Model.Image" alt="Card image cap">
+            </div>
             <div class="card-body p-1 px-3 row">
                 <div class="col-6">
                     <span class="text-dark badge p-2 border w-100" style="font-size:90%;background-color:lavenderblush">@Model.ProductType.Name</span>
